// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SelectBtnField > display correctly in dark mode with an error 1`] = `
<div class="
  v-application
  v-layout
  v-layout--full-height
  v-locale--is-ltr
  v-theme--light
">
  <div class="v-application__wrap">
    <div>
      <div class="select-btn-field">
        <ul
          aria-invalid="true"
          aria-label="Test"
          aria-multiselectable="true"
          aria-orientation="horizontal"
          aria-readonly="false"
          class="
            select-btn-field__options
            select-btn-field__options--error
            select-btn-field__options--inline
          "
          role="listbox"
          tabindex="0"
        >
          <li
            aria-checked="false"
            class="select-btn-field__item"
            role="option"
            tabindex="-1"
          >
            <div class="select-btn-field__item-content">
              <span class="text-body-1">
                Test 1
              </span>
              <i
                aria-hidden="true"
                class="
                  M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z
                  mdi
                  notranslate
                  v-icon
                  v-icon--size-default
                  v-theme--dark
                "
                style="visibility: hidden;"
              ></i>
            </div>
          </li>
          <li
            aria-checked="false"
            class="select-btn-field__item"
            role="option"
            tabindex="-1"
          >
            <div class="select-btn-field__item-content">
              <span class="text-body-1">
                Test 2
              </span>
              <i
                aria-hidden="true"
                class="
                  M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z
                  mdi
                  notranslate
                  v-icon
                  v-icon--size-default
                  v-theme--dark
                "
                style="visibility: hidden;"
              ></i>
            </div>
          </li>
        </ul>
        <p class="
          mb-0
          mt-2
          opacity-100
          px-3
          text-error
          theme--light
          v-messages
        ">
          Test
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectBtnField > display correctly with an error 1`] = `
<div class="select-btn-field">
  <ul
    aria-invalid="true"
    aria-label="Test"
    aria-multiselectable="false"
    aria-orientation="vertical"
    aria-readonly="false"
    class="
      select-btn-field__options
      select-btn-field__options--column
      select-btn-field__options--error
    "
    role="listbox"
    tabindex="0"
  >
    <li
      aria-selected="false"
      class="select-btn-field__item"
      role="option"
      tabindex="-1"
    >
      <div class="select-btn-field__item-content">
        <span class="text-body-1">
          Test
        </span>
        <i
          aria-hidden="true"
          class="
            M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z
            mdi
            notranslate
            v-icon
            v-icon--size-default
            v-theme--light
          "
          style="visibility: hidden;"
        ></i>
      </div>
    </li>
    <li
      aria-selected="false"
      class="select-btn-field__item"
      role="option"
      tabindex="-1"
    >
      <div class="select-btn-field__item-content">
        <span class="text-body-1">
          Test 2
        </span>
        <i
          aria-hidden="true"
          class="
            M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z
            mdi
            notranslate
            v-icon
            v-icon--size-default
            v-theme--light
          "
          style="visibility: hidden;"
        ></i>
      </div>
    </li>
    <li
      aria-selected="false"
      class="select-btn-field__item"
      role="option"
      tabindex="-1"
    >
      <div class="select-btn-field__item-content">
        <span class="text-body-1">
          Test 3
        </span>
        <i
          aria-hidden="true"
          class="
            M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z
            mdi
            notranslate
            v-icon
            v-icon--size-default
            v-theme--light
          "
          style="visibility: hidden;"
        ></i>
      </div>
    </li>
  </ul>
  <p class="
    mb-0
    mt-2
    opacity-100
    px-3
    text-error
    theme--light
    v-messages
  ">
    Test
  </p>
</div>
`;

exports[`SelectBtnField > display correctly with in dark mode with an hint 1`] = `
<div class="
  v-application
  v-layout
  v-layout--full-height
  v-locale--is-ltr
  v-theme--light
">
  <div class="v-application__wrap">
    <div>
      <div class="select-btn-field">
        <ul
          aria-invalid="false"
          aria-label="Test"
          aria-multiselectable="true"
          aria-orientation="horizontal"
          aria-readonly="false"
          class="
            select-btn-field__options
            select-btn-field__options--inline
          "
          role="listbox"
          tabindex="0"
        >
          <li
            aria-checked="false"
            class="select-btn-field__item"
            role="option"
            tabindex="-1"
          >
            <div class="select-btn-field__item-content">
              <span class="text-body-1">
                Test 1
              </span>
              <i
                aria-hidden="true"
                class="
                  M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z
                  mdi
                  notranslate
                  v-icon
                  v-icon--size-default
                  v-theme--dark
                "
                style="visibility: hidden;"
              ></i>
            </div>
          </li>
          <li
            aria-checked="false"
            class="select-btn-field__item"
            role="option"
            tabindex="-1"
          >
            <div class="select-btn-field__item-content">
              <span class="text-body-1">
                Test 2
              </span>
              <i
                aria-hidden="true"
                class="
                  M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z
                  mdi
                  notranslate
                  v-icon
                  v-icon--size-default
                  v-theme--dark
                "
                style="visibility: hidden;"
              ></i>
            </div>
          </li>
        </ul>
        <p class="
          mb-0
          mt-2
          opacity-100
          px-3
          theme--light
          v-messages
        ">
          Test
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectBtnField > render correctly in multiple mode 1`] = `
<div class="select-btn-field">
  <ul
    aria-invalid="false"
    aria-label="Test"
    aria-multiselectable="true"
    aria-orientation="vertical"
    aria-readonly="false"
    class="
      select-btn-field__options
      select-btn-field__options--column
    "
    role="listbox"
    tabindex="0"
  >
    <li
      aria-checked="false"
      class="select-btn-field__item"
      role="option"
      tabindex="-1"
    >
      <div class="select-btn-field__item-content">
        <span class="text-body-1">
          Test
        </span>
        <i
          aria-hidden="true"
          class="
            M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z
            mdi
            notranslate
            v-icon
            v-icon--size-default
            v-theme--light
          "
          style="visibility: hidden;"
        ></i>
      </div>
    </li>
    <li
      aria-checked="false"
      class="select-btn-field__item"
      role="option"
      tabindex="-1"
    >
      <div class="select-btn-field__item-content">
        <span class="text-body-1">
          Test 2
        </span>
        <i
          aria-hidden="true"
          class="
            M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z
            mdi
            notranslate
            v-icon
            v-icon--size-default
            v-theme--light
          "
          style="visibility: hidden;"
        ></i>
      </div>
    </li>
    <li
      aria-checked="false"
      class="select-btn-field__item"
      role="option"
      tabindex="-1"
    >
      <div class="select-btn-field__item-content">
        <span class="text-body-1">
          Test 3
        </span>
        <i
          aria-hidden="true"
          class="
            M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z
            mdi
            notranslate
            v-icon
            v-icon--size-default
            v-theme--light
          "
          style="visibility: hidden;"
        ></i>
      </div>
    </li>
  </ul>
  <p class="
    mb-0
    mt-2
    opacity-100
    px-3
    theme--light
    v-messages
  ">
    Test
  </p>
</div>
`;

exports[`SelectBtnField > renders correctly 1`] = `
<div class="select-btn-field">
  <ul
    aria-invalid="false"
    aria-multiselectable="false"
    aria-orientation="vertical"
    aria-readonly="false"
    class="
      select-btn-field__options
      select-btn-field__options--column
    "
    role="listbox"
    tabindex="0"
  ></ul>
  <!-- v-if -->
</div>
`;

exports[`SelectBtnField > renders correctly with props 1`] = `
<div class="select-btn-field">
  <ul
    aria-invalid="false"
    aria-label="Test"
    aria-multiselectable="false"
    aria-orientation="vertical"
    aria-readonly="false"
    class="
      select-btn-field__options
      select-btn-field__options--column
    "
    role="listbox"
    tabindex="0"
  >
    <li
      aria-selected="false"
      class="select-btn-field__item"
      role="option"
      tabindex="-1"
    >
      <div class="select-btn-field__item-content">
        <span class="text-body-1">
          Test
        </span>
        <i
          aria-hidden="true"
          class="
            M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z
            mdi
            notranslate
            v-icon
            v-icon--size-default
            v-theme--light
          "
          style="visibility: hidden;"
        ></i>
      </div>
    </li>
    <li
      aria-selected="false"
      class="select-btn-field__item"
      role="option"
      tabindex="-1"
    >
      <div class="select-btn-field__item-content">
        <span class="text-body-1">
          Test 2
        </span>
        <i
          aria-hidden="true"
          class="
            M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z
            mdi
            notranslate
            v-icon
            v-icon--size-default
            v-theme--light
          "
          style="visibility: hidden;"
        ></i>
      </div>
    </li>
    <li
      aria-selected="false"
      class="select-btn-field__item"
      role="option"
      tabindex="-1"
    >
      <div class="select-btn-field__item-content">
        <span class="text-body-1">
          Test 3
        </span>
        <i
          aria-hidden="true"
          class="
            M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z
            mdi
            notranslate
            v-icon
            v-icon--size-default
            v-theme--light
          "
          style="visibility: hidden;"
        ></i>
      </div>
    </li>
  </ul>
  <p class="
    mb-0
    mt-2
    opacity-100
    px-3
    theme--light
    v-messages
  ">
    Test
  </p>
</div>
`;
